[FIX] web: fix grouping content overlap
Issue

	- Be in multicompany
	- Have a company with a long name
	- Install Accounting
	- Settings > Currencies > Dollars
	- Click on the smart button "Rates"
	- Group by company

	Company name and rate overlap

Cause

	In `_computeDefaultWidths`, we use the method
	`_getColumnWidth` which returns a width depending on the
	field type.

	When you use group by, the fields order doesn't change
	so the company name in the group line have the width
	of the date field (92px) and there is nothing that
	limits the place that the string can takes so there
	is overflow.

Solution

	As it seems to be something very accurate, I think the
	safest solution would be to use the `o-text-overflow`
	saas mixin.

OPW-2218143

closes odoo/odoo#47928

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -125,7 +125,7 @@
                 padding-bottom: ($table-cell-padding-sm*2);
             }
             .o_group_name {
-                white-space: nowrap;
+                @include o-text-overflow(table-cell);
             }
             .o_group_buttons {
                 display: inline-block;
